--- a/platforms/src/main/resources/application.properties
+++ b/platforms/src/main/resources/application.properties
@@ -7,12 +7,38 @@
 #server.port=2222
 #eureka.client.serviceUrl.defaultZone=http://localhost:8761/eureka/
 
-spring.datasource.url=jdbc:mysql://172.16.18.133:30306/test
-spring.datasource.username=root
-spring.datasource.password=root
-spring.datasource.driver-class-name=com.mysql.jdbc.Driver
+######默认fnrt#############
+spring.datasource.url=oracle.jdbc.driver.OracleDriver
+spring.datasource.username=FRNT
+spring.datasource.password=FRNT
+spring.datasource.driverClassName=oracle.jdbc.driver.OracleDriver
 
+#spring.datasource.url=jdbc:mysql://172.16.18.133:30306/test
+#spring.datasource.username=root
+#spring.datasource.password=root
+#spring.datasource.driver-class-name=com.mysql.jdbc.Driver
+
+## 更多数据源
+custom.datasource.names=ds1,ds2,ds3
+custom.datasource.ds1.driverClassName=oracle.jdbc.driver.OracleDriver
+custom.datasource.ds1.url=jdbc:oracle:thin:@//172.16.18.161:1522/nwbiods
+custom.datasource.ds1.username=ctl
+custom.datasource.ds1.password=ctl
+
+custom.datasource.ds2.driverClassName=oracle.jdbc.driver.OracleDriver
+custom.datasource.ds2.url=jdbc:oracle:thin:@//172.16.18.161:1521/NWBIDM
+custom.datasource.ds2.username=FDM
+custom.datasource.ds2.password=FDM
+
+custom.datasource.ds3.driverClassName=org.postgresql.Driver
+custom.datasource.ds3.url=jdbc:postgresql://172.16.18.182:5432/csgbi
+custom.datasource.ds3.username=gpadmin
+custom.datasource.ds3.password=gpadmin@123
+
+#下面为连接池的补充设置，应用到上面所有数据源中
+spring.datasource.maximum-pool-size=80
 spring.datasource.max-idle=10
+spring.datasource.max-active=150
 spring.datasource.max-wait=10000
 spring.datasource.min-idle=5
 spring.datasource.initial-size=5
@@ -22,25 +48,7 @@ spring.datasource.test-while-idle=true
 spring.datasource.time-between-eviction-runs-millis=18800
 spring.datasource.jdbc-interceptors=ConnectionState;SlowQueryReport(threshold=0)
 
-mybatis.mapper-locations=classpath:sqlmap/*.xml
-mybatis.type-aliases-package=org.springboot.sample.entity
+#mybatis配置文件
+mybatis.mapper-locations=classpath:sqlmap/**/*.xml
+mybatis.type-aliases-package=com.kit.platforms.domain
 
-## 更多数据源
-#custom.datasource.names=ds1,ds2,ds3
-#custom.datasource.ds1.type=com.zaxxer.hikari.HikariDataSource
-#custom.datasource.ds1.driver-class-name=com.mysql.jdbc.Driver
-#custom.datasource.ds1.url=jdbc:mysql://localhost:3306/test
-#custom.datasource.ds1.username=root
-#custom.datasource.ds1.password=123456
-#
-#custom.datasource.ds2.type=com.zaxxer.hikari.HikariDataSource
-#custom.datasource.ds2.driver-class-name=com.mysql.jdbc.Driver
-#custom.datasource.ds2.url=jdbc:mysql://localhost:3306/test
-#custom.datasource.ds2.username=root
-#custom.datasource.ds2.password=123456
-#
-#custom.datasource.ds3.type=com.zaxxer.hikari.HikariDataSource
-#custom.datasource.ds3.driver-class-name=com.mysql.jdbc.Driver
-#custom.datasource.ds3.url=jdbc:mysql://localhost:3306/test
-#custom.datasource.ds3.username=root
-#custom.datasource.ds3.password=123456
