--- a/platforms/pom.xml
+++ b/platforms/pom.xml
@@ -106,6 +106,12 @@
             <version>2.4</version>
             <classifier>jdk15</classifier>
         </dependency>
+
+        <dependency>
+            <groupId>io.fabric8</groupId>
+            <artifactId>openshift-client</artifactId>
+            <version>${kubernetes.client.version}</version>
+        </dependency>
     </dependencies>
 
     <dependencyManagement>
