--- a/kubernetes-client/pom.xml
+++ b/kubernetes-client/pom.xml
@@ -28,7 +28,7 @@
   <groupId>io.fabric8</groupId>
   <artifactId>kubernetes-client</artifactId>
   <packaging>jar</packaging>
-  <name>Fabric8 :: Kubernetes :: Client Examples</name>
+  <name>Fabric8 :: Kubernetes :: Java Client</name>
 
 
   <properties>
