--- a/kubernetes-examples/src/main/resources/log4j2.yaml
+++ b/kubernetes-examples/src/main/resources/log4j2.yaml
@@ -22,7 +22,7 @@ Configuration:
       name: Console
       target: SYSTEM_OUT
       PatternLayout:
-        Pattern: "%d{HH:mm:ss.SSS} [%t] %-5level %logger{36} - %msg%n"
+        Pattern: "%d{HH:mm:ss.SSS} [%t] %-5level %logger{36} -nick %msg%n"
 
   Loggers:
     Root:
