--- a/platforms/src/main/resources/application.properties
+++ b/platforms/src/main/resources/application.properties
@@ -8,32 +8,32 @@
 #eureka.client.serviceUrl.defaultZone=http://localhost:8761/eureka/
 
 ######默认fnrt#############
-spring.datasource.url=oracle.jdbc.driver.OracleDriver
-spring.datasource.username=FRNT
-spring.datasource.password=FRNT
-spring.datasource.driverClassName=oracle.jdbc.driver.OracleDriver
+#spring.datasource.url=oracle.jdbc.driver.OracleDriver
+#spring.datasource.username=FRNT
+#spring.datasource.password=FRNT
+#spring.datasource.driverClassName=oracle.jdbc.driver.OracleDriver
 
-#spring.datasource.url=jdbc:mysql://172.16.18.133:30306/test
-#spring.datasource.username=root
-#spring.datasource.password=root
-#spring.datasource.driver-class-name=com.mysql.jdbc.Driver
+spring.datasource.url=jdbc:mysql://172.16.18.133:30306/test
+spring.datasource.username=root
+spring.datasource.password=root
+spring.datasource.driverClassName=com.mysql.jdbc.Driver
 
 ## 更多数据源
-custom.datasource.names=ds1,ds2,ds3
+custom.datasource.names=ds1
 custom.datasource.ds1.driverClassName=oracle.jdbc.driver.OracleDriver
 custom.datasource.ds1.url=jdbc:oracle:thin:@//172.16.18.161:1522/nwbiods
 custom.datasource.ds1.username=ctl
 custom.datasource.ds1.password=ctl
 
-custom.datasource.ds2.driverClassName=oracle.jdbc.driver.OracleDriver
-custom.datasource.ds2.url=jdbc:oracle:thin:@//172.16.18.161:1521/NWBIDM
-custom.datasource.ds2.username=FDM
-custom.datasource.ds2.password=FDM
-
-custom.datasource.ds3.driverClassName=org.postgresql.Driver
-custom.datasource.ds3.url=jdbc:postgresql://172.16.18.182:5432/csgbi
-custom.datasource.ds3.username=gpadmin
-custom.datasource.ds3.password=gpadmin@123
+#custom.datasource.ds2.driverClassName=oracle.jdbc.driver.OracleDriver
+#custom.datasource.ds2.url=jdbc:oracle:thin:@//172.16.18.161:1521/NWBIDM
+#custom.datasource.ds2.username=FDM
+#custom.datasource.ds2.password=FDM
+#
+#custom.datasource.ds3.driverClassName=org.postgresql.Driver
+#custom.datasource.ds3.url=jdbc:postgresql://172.16.18.182:5432/csgbi
+#custom.datasource.ds3.username=gpadmin
+#custom.datasource.ds3.password=gpadmin@123
 
 #下面为连接池的补充设置，应用到上面所有数据源中
 spring.datasource.maximum-pool-size=80
