--- a/platforms/src/main/resources/application.properties
+++ b/platforms/src/main/resources/application.properties
@@ -8,15 +8,15 @@
 #eureka.client.serviceUrl.defaultZone=http://localhost:8761/eureka/
 
 ######默认fnrt#############
-#spring.datasource.url=oracle.jdbc.driver.OracleDriver
-#spring.datasource.username=FRNT
-#spring.datasource.password=FRNT
-#spring.datasource.driverClassName=oracle.jdbc.driver.OracleDriver
+spring.datasource.url=oracle.jdbc.driver.OracleDriver
+spring.datasource.username=FRNT
+spring.datasource.password=FRNT
+spring.datasource.driverClassName=oracle.jdbc.driver.OracleDriver
 
-spring.datasource.url=jdbc:mysql://172.16.18.133:30306/test
-spring.datasource.username=root
-spring.datasource.password=root
-spring.datasource.driverClassName=com.mysql.jdbc.Driver
+#spring.datasource.url=jdbc:mysql://172.16.18.133:30306/test
+#spring.datasource.username=root
+#spring.datasource.password=root
+#spring.datasource.driverClassName=com.mysql.jdbc.Driver
 
 ## 更多数据源
 custom.datasource.names=ds1
